--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,11 +1,28 @@
 {% extends 'base.html' %} {%block content %}
-<div class="about_us">
-    <h1>About Us</h1>
-    <p>Since the humble beginnings of Emerald City Guitars nearly 20 years ago we have worked hard to maintain the high standard of trust and integrity that has enabled us to continue to be a frontrunner in the worldwide vintage guitar market. Our goal is
-        to succeed at a business level while creating an atmosphere that dignifies our customers and our team of professionals. The ownership and staff remain aware of the ever-changing landscape of music, technology and the economy. With this in mind
-        ECG strives to be open-minded and willing to change and make adjustments to uphold our high service standard to our many customers both local and worldwide. We pride ourselves both in our ability to create a warm and friendly atmosphere in our
-        shop and in our passion to bring into our inventory a steady flow of top quality vintage and used instruments. Our instruments are authenticated appraised, and guaranteed to be represented in a manner that upholds our standard of integrity. We
-        take great care in our packaging and shipping procedures when sending products to our worldwide clients. Comments and suggestions from our customers are one of most important tools for us to continue to serve you in a manner that we envision,
-        so we encourage you to help us serve you better. We value and honor our customers and never take your business for granted.</p>
+
+<div class="container-fluid aboutus">
+    <img src="/static/images/Shop.jpg" alt="">
+    <div class="container">
+        <h1>About Us</h1>
+        <p>Since the humble beginnings of Jimbo Guitars nearly 6 years ago we have worked hard to maintain the high standard of trust and integrity that has enabled us to continue to be a frontrunner in the S.E Asia vintage guitar market. Our goal is to
+            succeed at a business level while creating an atmosphere that dignifies our customers and our team of professionals. The ownership and staff remain aware of the ever-changing landscape of music, technology and the economy. With this in mind
+            Jimbo Guitars strives to be open-minded and willing to change and make adjustments to uphold our high service standard to our many customers both local and worldwide. We pride ourselves both in our ability to create a warm and friendly atmosphere
+            in our shop and in our passion to bring into our inventory a steady flow of top quality vintage and used instruments. Our instruments are authenticated appraised, and guaranteed to be represented in a manner that upholds our standard of integrity.
+            We take great care in our packaging and shipping procedures when sending products to our clients. Comments and suggestions from our customers are one of most important tools for us to continue to serve you in a manner that we envision, so
+            we encourage you to help us serve you better. We value and honor our customers and never take your business for granted.</p>
+    </div>
+
+    <h1>Contact Us</h1>
+    <div class="box no-box">
+        <ul class="contact">
+            <li class="phone">Tel: 678 8688</li> 
+            <li class="fax">Fax: 678 8678</li>
+            <li class="add">Blk 888, RocknRoll Street #02-08 SG Guitar Complex Singapore</li>
+            <li class="email">support@jimboguitars.sg</li>
+        </ul>
+    </div>
 </div>
+
+
+
 {%endblock%}
