--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %} {% load static %} {% block content %}
-
 <div class="container-fluid">
   <hr> {% if messages %}
   <div class="alert alert-success" role="alert">
@@ -13,11 +12,10 @@
   </div>
 </div>
 
-<!-- Page Content -->
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-lg-3">
-      <h1 class="my-4">Brands</h1>
+      <h3 class="my-4">Shop by brand</h3>
       <div class="list-group">
         <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Fender&min_cost=&max_cost=" class="list-group-item">Fender</a>
         <a href="https://jimboguitars.herokuapp.com/show_guitars/?search_terms=Gibson&min_cost=&max_cost=" class="list-group-item">Gibson</a>
@@ -27,148 +25,142 @@
       </div>
     </div>
 
-    <div class="col-lg-9">
-      <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner" role="listbox">
-          <div class="carousel-item active">
-            <img class="d-block img-fluid" src="/static/images/Shop.jpg" alt="First slide">
+      <div class="col-lg-9">
+        <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <img class="d-block img-fluid" src="/static/images/Shop.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="/static/images/60s-LP.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="/static/images/Acoustasonic.jpg" alt="Third slide">
+            </div>
           </div>
-          <div class="carousel-item">
-            <img class="d-block img-fluid" src="/static/images/60s-LP.jpg" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block img-fluid" src="/static/images/Acoustasonic.jpg" alt="Third slide">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
+        </div>
+
+        <div>
+          <h4>Welcome to Jimbo Guitars</h4>
+          <p>Our vast selection of used and vintage guitars and amps includes Fender, Gibson, Gretsch and many other brands. We also carry many Japanese vintage electric guitars from the 80’s. We pay top dollar for used and vintage guitars and amps etc and
+            members can list your instruments for sale via our online shop. Tell us what you’ve got! We offer FREE appraisals for your used and vintage instruments by our certified vintage expert.</p>
+        </div>
+
+        <h4>Featured Products - Please call us for enquiry and private viewing</h4>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <a href="#"><img class="card-img-top" src="/static/images/Featured-1964Strat.jpg" alt=""></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">1964 Fender Stratocaster</a>
+                </h4>
+                <h5>$32,950</h5>
+                <p class="card-text">Year: 1964<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <a href="#"><img class="card-img-top" src="/static/images/Featured-1956LPGoldTop.jpg" alt=""></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">1956 Gibson Les Paul Goldtop</a>
+                </h4>
+                <h5>$35,995</h5>
+                <p class="card-text">Year: 1956<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <a href="#"><img class="card-img-top" src="/static/images/Featured-1962GLPSSG.jpg" alt=""></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">1962 Gibson Les Paul Standard (SG)</a>
+                </h4>
+                <h5>$24,955</h5>
+                <p class="card-text">Year: 1962<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <a href="#"><img class="card-img-top" src="/static/images/Featured-1940MartinD28.jpg" alt=""></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">1940 Martin D-28</a>
+                </h4>
+                <h5>$88,950</h5>
+                <p class="card-text">Year: 1940<br>Condition: Very Good<br>Case: Hard Shell Case</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <a href="#"><img class="card-img-top" src="/static/images/Featured-1958GFVK.jpg" alt=""></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">1958 Gibson <br>Flying V</a>
+                </h4>
+                <h5>$410,000</h5>
+                <p class="card-text">Year: 1940<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <a href="#"><img class="card-img-top" src="/static/images/Featured-1955StratBlonde.jpg" alt=""></a>
+              <div class="card-body">
+                <h4 class="card-title">
+                  <a href="#">1956 Fender Stratocaster Hardtail Blonde</a>
+                </h4>
+                <h5>$56.950</h5>
+                <p class="card-text">Year: 1955<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <div>
-        <h4>Welcome to Jimbo Guitars</h4>
-        <p>Our vast selection of used and vintage guitars and amps includes Fender, Gibson, Gretsch and many other brands. We also carry many Japanese vintage electric guitars from the 80’s. We pay top dollar for used and vintage guitars and amps etc and
-          members can list your instruments for sale via our online shop. Tell us what you’ve got! We offer FREE appraisals for your used and vintage instruments by our certified vintage expert.</p>
-      </div>
-
-      <h4>Featured Products - Please call us for enquiry and private viewing</h4>
-      <div class="row">
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">1964 Fender Stratocaster</a>
-              </h4>
-              <h5>$32,950</h5>
-              <p class="card-text">Year: 1964<br>Condition: Very Good<br>Case: Original Hard Shell Case</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Two</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Three</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Four</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Five</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 mb-4">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Item Six</a>
-              </h4>
-              <h5>$24.99</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
-            </div>
-          </div>
-        </div>
-
-      </div>
-      <!-- /.row -->
-
     </div>
-    <!-- /.col-lg-9 -->
-
   </div>
-  <!-- /.row -->
 
-</div>
-<!-- /.container -->
 
 {% endblock %}
