--- a/templates/show_guitars.html
+++ b/templates/show_guitars.html
@@ -25,7 +25,8 @@
 					<div class="product-title">{{guitar.brand}}</div>
 					<div class="product-desc">{{guitar.model}}</div>
 					<div class="product-desc">{{guitar.color}}</div>
-					<div class="product-rating"><i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i> </div>
+					<div class="product-rating"><i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star gold"></i> <i class="fa fa-star-o"></i>
+					</div>
 					<hr>
 					<div class="product-price">${{guitar.cost}}</div>
 					<div class="product-stock">In Stock</div>
@@ -54,6 +55,5 @@
 	</div>
 	{% endfor %}
 </div>
-
 
 {% endblock %}
