--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
           <!--</form>-->
           <form method="GET" class="form-inline" action="{% url 'show_guitars' %}">
           <input name="search_terms" class="form-control mr-sm-2" type="search" placeholder="Search for Guitars">
-          <button class="btn btn-outline-success search_button" type="submit"><i class="fas fa-search"></i></button>
+          <button class="btn btn-outline-light search_button" type="submit"><i class="fas fa-search"></i></button>
         </form>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'home' %}">Home</a>
@@ -79,6 +79,20 @@
       </div>
   </nav>
       <!--</div>-->
+      
+      <div class="container-fluid">
+   {% if messages %}
+  <div class="alert alert-success mt-4" role="alert">
+    <div>
+      {% for message in messages %} {{ message }} {% endfor %}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+    </div>
+    {% endif %}
+  </div>
+</div>
+
 
   <div class='container'>
     {%block content%}{%endblock%}
